--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,1 +1,15 @@
-<link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon">
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@300;500&display=swap"
+  rel="stylesheet"
+/>
+
+<!-- Favicon -->
+<!-- <link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon"> -->
+<link
+  rel="shortcut icon"
+  href="https://www.ibm.com/favicon.ico"
+  type="image/x-icon"
+/>
