--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,6 +107,21 @@ layout: table_wrappers
       {{ nav_footer_custom }}
     {% else %}
       <footer class="site-footer">
+		<button class="btn js-toggle-dark-mode" style="display: block; margin-bottom: 10px;">Dark Theme</button>
+		<script>
+			const toggleDarkMode = document.querySelector('.js-toggle-dark-mode');
+
+			jtd.addEvent(toggleDarkMode, 'click', function(){
+			if (jtd.getTheme() === 'dark') {
+				jtd.setTheme('light');
+				toggleDarkMode.textContent = 'Dark Scheme';
+			} else {
+				jtd.setTheme('dark');
+				toggleDarkMode.textContent = 'Light Scheme';
+			}
+			});
+		</script>
+
         This site uses <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
       </footer>
     {% endif %}
